--- a/Views/Shared/_TarazismReviewCard.cshtml
+++ b/Views/Shared/_TarazismReviewCard.cshtml
@@ -1,5 +1,5 @@
 ﻿@* Views/Shared/_TarazismReviewCard.cshtml *@
-@model Tarazism.Models.ReviewModel?
+@model Tarazism.Models.ViewModels.ReviewViewModel
 
 @if (Model == null)
 {
